--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 remote_theme: pages-themes/minimal@v0.2.0
 logo: /assets/img/logo.png
+title: [music generator]
+description: [music, chord, bpm, scale, rhythm, generator]
