--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/minimal@v0.2.0
 logo: /assets/img/logo.png
-title: "music generators | music-quokka"
+title: "music generators"
